[tool.poetry]
name = "html_toc"
version = "0.1.1"
description = "Generate TOC from HTML."
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/verilab/html-toc"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
